--- a/playground/package.json
+++ b/playground/package.json
@@ -11,15 +11,9 @@
     "build-only": "vite build"
   },
   "dependencies": {
-    "vue": "^3.4.15",
-    "yourlib": "workspace:*"
+    "@moraleja39/vue-colorjs-picker": "workspace:*"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.2",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/tsconfig": "^0.5.1",
-    "typescript": "~5.3.3",
-    "vite": "^5.0.12",
-    "vue-tsc": "^1.8.27"
+    "@tsconfig/node24": "24.0.1"
   }
 }
