another tsconfig fix

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "6.2.0",
+    "@tsconfig/node24": "24.0.1",
     "@types/node": "24.10.0",
     "@vitejs/plugin-vue": "6.0.1",
     "@vue/tsconfig": "0.8.1",
