--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "npm-run-all": "4.1.5",
     "typescript": "5.9.3",
     "vite": "7.2.2",
-    "vue-tsc": "3.1.3",
-    "vue": "3.5.24"
+    "vue": "3.5.24",
+    "vue-tsc": "3.1.3"
   }
 }
