--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "6.2.0",
+    "@tailwindcss/vite": "^4.1.17",
     "@tsconfig/node24": "24.0.1",
     "@types/node": "24.10.0",
     "@vitejs/plugin-vue": "6.0.1",
     "@vue/tsconfig": "0.8.1",
     "eslint": "9.39.1",
     "npm-run-all": "4.1.5",
+    "tailwindcss": "^4.1.17",
     "typescript": "5.9.3",
     "vite": "7.2.2",
     "vue": "3.5.24",
