more demo styles

--- a/playground/package.json
+++ b/playground/package.json
@@ -11,9 +11,11 @@
     "build-only": "vite build"
   },
   "dependencies": {
+    "@fontsource-variable/inter-tight": "^5.2.7",
     "@moraleja39/vue-colorjs-picker": "workspace:*",
     "@primeuix/themes": "^1.2.5",
     "@tailwindcss/vite": "^4.1.17",
+    "colorjs.io": "0.5.2",
     "primevue": "^4.4.1",
     "tailwindcss": "^4.1.17"
   }
