--- a/playground/package.json
+++ b/playground/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@fontsource-variable/inter-tight": "^5.2.7",
-    "@moraleja39/vue-colorjs-picker": "workspace:*",
+    "vue-colorjs-picker": "workspace:*",
     "@primeuix/themes": "^1.2.5",
     "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.0.0",
