added keywords & readme to the published package

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "run-p -l library:watch playground:dev",
     "library:watch": "pnpm --filter \"vue-colorjs-picker\" watch",
-    "library:build": "pnpm --filter \"vue-colorjs-picker\" build",
+    "library:build": "pnpm --filter \"vue-colorjs-picker\" build && cp ./README.md ./library/dist/README.md",
     "library:publish": "pnpm --filter \"vue-colorjs-picker\" publish",
     "playground:dev": "pnpm --filter \"playground\" dev",
     "lint": "eslint .",
