--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/tsconfig": "0.8.1",
     "eslint": "9.39.1",
     "npm-run-all": "4.1.5",
+    "release-it": "^19.0.6",
     "typescript": "5.9.3",
     "vite": "7.2.2",
     "vue": "3.5.24",
