--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "6.2.0",
+    "@release-it/conventional-changelog": "^10.0.2",
     "@tsconfig/node24": "24.0.1",
     "@types/node": "24.10.1",
     "@vitejs/plugin-vue": "6.0.1",
