--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,21 @@ jobs:
         env:
           NODE_ENV: production
 
+      - name: Extract changelog for this version
+        id: changelog
+        run: |
+          VERSION="${GITHUB_REF_NAME#v}"
+          CHANGELOG=$(awk -v ver="$VERSION" '
+            /^## / { 
+              if (p) { exit };
+              if (index($0, "[" ver "]") || index($0, ver)) { p = 1; next }
+            }
+            p && NF { print }
+          ' CHANGELOG.md)
+          echo "content<<EOF" >> $GITHUB_OUTPUT
+          echo "$CHANGELOG" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
       - name: Publish to npm
         run: pnpm library:publish --no-git-checks
 
@@ -41,5 +56,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           name: Release ${{ github.ref_name }}
+          body: ${{ steps.changelog.outputs.content }}
           draft: false
           prerelease: false
