--- a/playground/package.json
+++ b/playground/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@fontsource-variable/inter-tight": "^5.2.7",
-    "vue-colorjs-picker": "workspace:*",
     "@primeuix/themes": "^1.2.5",
     "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.0.0",
     "colorjs.io": "0.5.2",
     "primevue": "^4.4.1",
     "shiki": "^3.15.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "vue-colorjs-picker": "workspace:*"
   }
 }
